--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,10 +2,17 @@
 <html>
   <head>
     <title><%= title %></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.0/js/all.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <section class="section">
+      <div class="container">
+        <h1><%= title %></h1>
+        <p>Welcome to <%= title %></p>
+      </div>
+    </section>
   </body>
 </html>
