--- a/views/show.ejs
+++ b/views/show.ejs
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
     <section class="section">
