--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
                 <a href="/projects/<%= a.id %>"><%= a.title %></a>
             <% }) %>
         </div>
-        <a href="/projects/new">Add a Project</a>
+        <a href="/projects/new" class="title is-2">Add a Project</a>
       </div>
     </section>
   </body>
