--- a/views/new.ejs
+++ b/views/new.ejs
@@ -12,14 +12,14 @@
           <div class="field">
             <label class="label">Project Name</label>
             <div class="control">
-              <input class="input" type="text" placeholder="Project Name">
+              <input class="input" type="text" name="title" placeholder="Project Name">
             </div>
           </div>
 
           <div class="field">
             <label class="label">GitHub URL</label>
             <div class="control">
-              <input class="input" type="text" placeholder="GitHub URL">
+              <input class="input" type="text" name="githubLink" placeholder="GitHub URL">
               <!-- <span class="icon is-small is-left">
                  <i class="fas fa-github"></i>
               </span> -->
@@ -29,28 +29,14 @@
           <div class="field">
             <label class="label">Project Description</label>
             <div class="control">
-              <textarea class="textarea" placeholder="Enter your description here..."></textarea>
+              <textarea class="textarea" name="description" placeholder="Enter your description here..."></textarea>
             </div>
           </div>
 
-          <div class="field">
-          <div class="file">
-            <label class="file-label">
-              <div class="control">
-                <input class="file-input" type="file" name="resume">
-                <span class="file-cta">
-                  <span class="file-label">
-                    Choose a file…
-                  </span>
-                </span>
-              </div>
-            </label>
-          </div>
-          </div>
           <br />
           <div class="field is-grouped">
             <div class="control">
-              <button class="button is-link">Submit</button>
+              <button class="button is-link is-dark">Submit</button>
             </div>
           </div>
         </form>
