--- a/views/new.ejs
+++ b/views/new.ejs
@@ -36,7 +36,7 @@
           <br />
           <div class="field is-grouped">
             <div class="control">
-              <button class="button is-link is-dark">Submit</button>
+              <button class="button is-dark">Submit</button>
             </div>
           </div>
         </form>
