--- a/views/show.ejs
+++ b/views/show.ejs
@@ -9,6 +9,7 @@
         <h2 class="title">
           <%= project.title %>
         </h2>
+        <p style="font-size: 16px;"><%= project.description %></p>
       </div>
     </section>
   </body>
